# mifetch

./: Cargo.toml  LICENSE  README.md  install.sh  installer.sh  mifetch
src/: main.rs
