[package]
name = "mifetch"
version = "0.1.0"
authors = ["RealCodeCreate"] # Почту можно не писать, если не хочешь
description = "Ultra-fast system fetch for sxwm and Gentoo/CachyOS"
edition = "2021"
readme = "README.md"
license = "LGPL-3.0-or-later"

[[bin]]
name = "mifetch"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
# Мы оставляем это поле пустым. Нам не нужны ни serde, ни chrono.
# Мы читаем всё напрямую из системных файлов /proc, как настоящие ниндзя.
